1251916 CTHBFEDEVID -too much white space in front - fix page ii
git-tfs-id: [https://tfsnpt.int.thomson.com:443/tfs/Cobalt_Collection/]$/Cobalt eBook Builder/Development;C1054861

--- a/ebookStylesheets/css/document.css
+++ b/ebookStylesheets/css/document.css
@@ -853,6 +853,10 @@ td[rowsep="1"] {
   margin-top: 12em;
 }
 
+.frontmatter > .fm_copyright_page > .fm_current_copyright > .pre_leading_20p {
+  margin-top: 12em;
+}
+
 .ebook-isbn {
   text-align: center;
   font-size: 0.7em;
